# CatWeazle

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
AWSLambda/: LambdaDeploymentPackageBuilder.sh  function.py
CatWeazle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
catweazle/: __init__.py  applog.py  config.py  errors.py  main.py  register.py
catweazle/authorize/: __init__.py
catweazle/controller/: authenticate.py  instances.py  permissions.py  users.py
catweazle/controller/api/: __init__.py
catweazle/controller/api/v1/: __init__.py  instances.py
catweazle/controller/api/v2/: __init__.py  authenticate.py  instances.py  permissions.py  users.py  users_credentials.py
catweazle/controller/oauth/: __init__.py  authenticate.py
catweazle/crud/: common.py  credentials.py  foreman.py  instances.py  ldap.py  mixins.py  oauth.py  permissions.py  users.py
catweazle/middleware/: __init__.py
catweazle/model/: __init__.py  oauth.py
catweazle/model/v1/: instances.py
catweazle/model/v2/: authenticate.py  common.py  credentials.py  instances.py  permissions.py  users.py
catweazle/models/: aa.py  aws_route53.py  credentials.py  foreman_proxy.py  instances.py  mixins.py  permissions.py  sessions.py  users.py
catweazle/schemes/: __init__.py  config_main.py
catweazle/static/: swagger.yaml
contrib/: catweazle  catweazle_register
vagrant/: Vagrantfile  install.sh
vagrant/scripts/: mongod.conf  mongodb.repo
